Added project & ignoring generated files

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ xcuserdata/
 
 # Backup files
 *~.nib
+
+# Project generated
+SiriusMapIOS.xcodeproj
+
+# Workspace generated
+SiriusMapIOS.xcworkspace
