--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -16,9 +16,8 @@ jobs:
         with:
           channel: 'stable'
           cache: true
-      - run: cd flutter_sirius_map
       - name: Install dependencies
-        run: flutter pub get
+        run: cd flutter_sirius_map flutter pub get
       - name: Build runner build
         run: flutter pub run build_runner build --delete-conflicting-outputs
       - name: Analyze project source
@@ -34,7 +33,8 @@ jobs:
         with:
           channel: 'stable'
           cache: true
-      - run: cd flutter_sirius_map
+      - name: Go to repo
+        run: cd flutter_sirius_map
       - name: Install dependencies
         run: flutter pub get
       - name: Build runner build
