--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -16,8 +16,9 @@ jobs:
         with:
           channel: 'stable'
           cache: true
+      - run: cd ../../flutter_sirius_map
       - name: Install dependencies
-        run: cd flutter_sirius_map flutter pub get
+        run: flutter pub get
       - name: Build runner build
         run: flutter pub run build_runner build --delete-conflicting-outputs
       - name: Analyze project source
@@ -34,7 +35,7 @@ jobs:
           channel: 'stable'
           cache: true
       - name: Go to repo
-        run: cd flutter_sirius_map
+      - run: cd ../../flutter_sirius_map
       - name: Install dependencies
         run: flutter pub get
       - name: Build runner build
@@ -54,7 +55,7 @@ jobs:
         with:
           channel: 'stable'
           cache: true
-      - run: cd flutter_sirius_map
+      - run: cd ../../flutter_sirius_map
       - name: Install dependencies
         run: flutter pub get
       - name: Build runner build
