rewrite switching on flutter

--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Switching to Flutter dependencies
-        run: cd ../../flutter_sirius_map
+        run: cd flutter_sirius_map
       - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
       - uses: subosito/flutter-action@v2
         with:
