--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -2,17 +2,15 @@ name: Flutter
 
 on:
   push:
-    branches: [ "develop", "flutter_ci","flutter_ci_test" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "develop", "flutter_ci","flutter_ci_test" ]
+    branches: [ "main" ]
 jobs:
   analyze:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
-      - name: Switching to Flutter dependencies
-        run: cd flutter_sirius_map
       - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
       - uses: subosito/flutter-action@v2
         with:
@@ -20,8 +18,6 @@ jobs:
           cache: true
       - name: Install dependencies
         run: flutter pub get
-      - name: Build runner build
-        run: flutter pub run build_runner build --delete-conflicting-outputs
       - name: Analyze project source
         run: flutter analyze
       - name: Format check
@@ -30,8 +26,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Switching to Flutter dependencies
-        run: cd ../../flutter_sirius_map
       - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
       - uses: subosito/flutter-action@v2
         with:
@@ -39,8 +33,6 @@ jobs:
           cache: true
       - name: Install dependencies
         run: flutter pub get
-      - name: Build runner build
-        run: flutter pub run build_runner build --delete-conflicting-outputs
       - name: Run tests
         run: flutter test
   build:
@@ -51,8 +43,6 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: '11'
-      - name: Switching to Flutter dependencies
-        run: cd ../../flutter_sirius_map
       - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
       - uses: subosito/flutter-action@v2
         with:
@@ -60,7 +50,5 @@ jobs:
           cache: true
       - name: Install dependencies
         run: flutter pub get
-      - name: Build runner build
-        run: flutter pub run build_runner build --delete-conflicting-outputs
       - name: Flutter build
-        run: flutter build apk --flavor dev -t lib/main_dev.dart --dart-define=KEY_BEARER=${{secrets.KEY_BEARER}}
+        run: flutter build apk
