--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -17,7 +17,9 @@ jobs:
           channel: 'stable'
           cache: true
       - name: Install dependencies
-        run: flutter pub get
+        run: |
+          cd flutter_sirius_map
+          flutter pub get
       - name: Analyze project source
         run: flutter analyze
       - name: Format check
@@ -32,7 +34,9 @@ jobs:
           channel: 'stable'
           cache: true
       - name: Install dependencies
-        run: flutter pub get
+        run: |
+          cd flutter_sirius_map
+          flutter pub get
       - name: Run tests
         run: flutter test
   build:
@@ -49,6 +53,8 @@ jobs:
           channel: 'stable'
           cache: true
       - name: Install dependencies
-        run: flutter pub get
+        run: |
+          cd flutter_sirius_map
+          flutter pub get
       - name: Flutter build
         run: flutter build apk
