--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -57,4 +57,6 @@ jobs:
           cd flutter_sirius_map
           flutter pub get
       - name: Flutter build
-        run: flutter build apk
+        run: |
+          cd flutter_sirius_map
+          flutter build apk
