--- a/SiriusMobileIOS/project.yml
+++ b/SiriusMobileIOS/project.yml
@@ -1,11 +1,11 @@
-name: SiriusMapIOS
+name: SiriusMobileIOS
 
 ############
 # Options
 ############
 
 options:
-  bundleIdPrefix: com.SiriusMapIOS
+  bundleIdPrefix: com.SiriusMobileIOS
 
 ############
 # Configs
@@ -30,11 +30,11 @@ configs:
   # PRODUCT_BUNDLE_IDENTIFIER: $(AS_BUNDLE_IDENTIFIER)
 
 targets:
-  SiriusMapIOS:
+  SiriusMobileIOS:
     type: application
     platform: iOS
     deploymentTarget: "14.0"
-    sources: [SiriusMapIOS]
+    sources: [SiriusMobileIOS]
     settings:
       base:
         MARKETING_VERSION: 1.0.0
