--- a/flutter_sirius_map/pubspec.yaml
+++ b/flutter_sirius_map/pubspec.yaml
@@ -82,6 +82,12 @@ flutter:
     - family: AndadaPro
       fonts:
         - asset: assets/fonts/AndadaPro-Regular.ttf
+        - asset: assets/fonts/AndadaPro-Italic.ttf
+          style: italic
+        - asset: assets/fonts/AndadaPro-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/AndadaPro-SemiBold.ttf
+          weight: 600
         # - asset: fonts/Schyler-Italic.ttf
         #   style: italic
   #   - family: Trajan Pro
