--- a/flutter_sirius_map/pubspec.yaml
+++ b/flutter_sirius_map/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_riverpod: ^2.5.1
   flutter_localization: ^0.2.0
   intl: ^0.18.1
+  freezed: ^2.4.7
+  freezed_annotation: ^2.4.1
 
 dev_dependencies:
   flutter_test:
