--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -80,5 +80,7 @@ jobs:
           flutter pub get
           flutter gen-l10n 
       - name: Flutter build ios
-        run: flutter build ios --no-codesign
+        run: |
+          cd flutter_sirius_map
+          flutter build ios --no-codesign
     
