--- a/flutter_sirius_map/pubspec.yaml
+++ b/flutter_sirius_map/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_riverpod: ^2.5.1
   flutter_localization: ^0.2.0
   intl: ^0.18.1
+  flutter_screenutil: ^5.9.0
 
 dev_dependencies:
   flutter_test:
