--- a/flutter_sirius_map/pubspec.yaml
+++ b/flutter_sirius_map/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_screenutil: ^5.9.0
   freezed: ^2.4.7
   freezed_annotation: ^2.4.1
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.0
 
 
 dev_dependencies:
