--- a/flutter_sirius_map/pubspec.yaml
+++ b/flutter_sirius_map/pubspec.yaml
@@ -44,7 +44,12 @@ dependencies:
   freezed: ^2.4.7
   freezed_annotation: ^2.4.1
   flutter_map: ^6.1.0
-  latlong2: ^0.9.0
+  latlong2: ^0.9.0 
+  flutter_map_cache: ^1.3.0
+  path_provider: ^2.1.2
+  dio_cache_interceptor_db_store: ^5.1.0
+  sqlite3_flutter_libs: ^0.5.15
+  riverpod_annotation: ^2.3.5
 
 
 dev_dependencies:
@@ -59,6 +64,7 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   build_runner: ^2.4.8
   theme_tailor: ^1.1.2
+  riverpod_generator: ^2.4.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
