--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -65,6 +65,21 @@ jobs:
         run: |
           cd flutter_sirius_map
           flutter build apk
+      - name: Build APK for artifacts
+        run: |
+          cd flutter_sirius_map 
+          flutter build apk --split-per-abi --release
+      - name: Build APPBUNDLE
+        run: |
+          cd flutter_sirius_map
+          flutter build appbundle --release
+      - name: Create Github Release
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: "build/app/outputs/apk/release/*.apk,build/app/outputs/bundle/release/*.aab"
+          token: ${{ secrets.TOKEN }}
+
+          
   build-ios:
     runs-on: macos-latest
     timeout-minutes: 15
