--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -76,6 +76,8 @@ jobs:
       - name: Create Github Release
         uses: ncipollo/release-action@v1
         with:
+          allowUpdates: true
+          artifactErrorsFailBuild: true
           artifacts: "build/app/outputs/apk/release/*.apk,build/app/outputs/bundle/release/*.aab"
           token: ${{ secrets.TOKEN }}
 
