--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -65,22 +65,6 @@ jobs:
         run: |
           cd flutter_sirius_map
           flutter build apk
-      - name: Build APK for artifacts
-        run: |
-          cd flutter_sirius_map 
-          flutter build apk --split-per-abi --release
-      - name: Build APPBUNDLE
-        run: |
-          cd flutter_sirius_map
-          flutter build appbundle --release
-      - name: Create Github Release
-        uses: actions/upload-artifact@v2
-        with:
-          name: release-apk
-          path: flutter_sirius_map/android/build/app/outputs/flutter-apk/app-release.apk
-          
-
-          
   build-ios:
     runs-on: macos-latest
     timeout-minutes: 15
@@ -102,4 +86,20 @@ jobs:
           pod install
           cd ..
           flutter build ios --no-codesign
-    
+  build-android-release:
+    runs-on: ubuntu-latest
+    if: "github.ref == 'refs/heads/release'"
+    timeout-minutes: 10
+    steps: 
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v1
+        with: 
+          java-version: 12.x
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+      - name: "Upload apk artifacts"
+        uses: actions/upload-artifact@v2
+        with:
+          name: release-apk
+          path: android/build/app/outputs/flutter-apk/app-release.apk
