--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -88,13 +88,12 @@ jobs:
           flutter build ios --no-codesign
   build-android-release:
     runs-on: ubuntu-latest
-    if: "github.ref == 'refs/heads/release'"
     timeout-minutes: 10
     steps: 
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v1
         with: 
-          java-version: 12.x
+          java-version: 11
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
