--- a/flutter_sirius_map/pubspec.yaml
+++ b/flutter_sirius_map/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   dio_cache_interceptor_db_store: ^5.1.0
   sqlite3_flutter_libs: ^0.5.15
   riverpod_annotation: ^2.3.5
+  dijkstra: ^0.0.4
 
 
 dev_dependencies:
@@ -80,6 +81,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/points/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
