--- a/flutter_sirius_map/pubspec.yaml
+++ b/flutter_sirius_map/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   dio_cache_interceptor_db_store: ^5.1.0
   sqlite3_flutter_libs: ^0.5.15
   riverpod_annotation: ^2.3.5
+  google_fonts: ^6.2.1
+  json_annotation: ^4.8.1
 
 
 dev_dependencies:
@@ -62,9 +64,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
-  build_runner: ^2.4.8
   theme_tailor: ^1.1.2
   riverpod_generator: ^2.4.0
+  json_serializable: ^6.7.1
+  build_runner: ^2.4.8
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
