--- a/sirius-map-ios/project.yml
+++ b/sirius-map-ios/project.yml
@@ -34,10 +34,15 @@ targets:
     type: application
     platform: iOS
     deploymentTarget: "16.0"
-    sources: [SiriusMap]
+    sources:
+      - path: SiriusMap
+        excludes: SiriusMap/Map/Model/IMDFData
+      - path: SiriusMap/Map/Model/IMDFData
+        type: folder
     settings:
       base:
         MARKETING_VERSION: 1.0.0
         SWIFT_VERSION: 5.2
         SWIFT_OPTIMIZATION_LEVEL: "-Onone"
         TARGETED_DEVICE_FAMILY: 1
+
