--- a/flutter_sirius_map/pubspec.yaml
+++ b/flutter_sirius_map/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   sqlite3_flutter_libs: ^0.5.15
   riverpod_annotation: ^2.3.5
   dijkstra: ^0.0.4
+  shared_preferences: ^2.2.2
+  json_annotation: ^4.8.1
 
 
 dev_dependencies:
@@ -66,6 +68,7 @@ dev_dependencies:
   build_runner: ^2.4.8
   theme_tailor: ^1.1.2
   riverpod_generator: ^2.4.0
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
