[SIRIUSMAP-44] qr code scanner

--- a/flutter_sirius_map/pubspec.yaml
+++ b/flutter_sirius_map/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   dijkstra: ^0.0.4
   shared_preferences: ^2.2.2
   json_annotation: ^4.8.1
+  mobile_scanner: ^4.0.1
 
 
 dev_dependencies:
