--- a/flutter_sirius_map/pubspec.yaml
+++ b/flutter_sirius_map/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  flutter_typeahead: ^5.2.0
   cupertino_icons: ^1.0.6
   theme_tailor_annotation: ^1.2.0
   flutter_riverpod: ^2.5.1
@@ -53,6 +54,8 @@ dependencies:
   google_fonts: ^6.2.1
   json_annotation: ^4.8.1
   dijkstra: ^0.0.4
+  logger: ^2.2.0
+  
 
 
 
@@ -85,6 +88,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/points/name_to_id.json
     - assets/images/
     - assets/points/
   #   - images/a_dot_burr.jpeg
