--- a/flutter_sirius_map/android/app/build.gradle
+++ b/flutter_sirius_map/android/app/build.gradle
@@ -64,4 +64,9 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    constraints{
+          implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0'
+          implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0'  
+    }
+}
