Added SiriusMapUITests target in project.yml

--- a/sirius-map-ios/project.yml
+++ b/sirius-map-ios/project.yml
@@ -48,4 +48,12 @@ targets:
     preBuildScripts:
       - name: Run SwiftFormat Script
         script: "sh Scripts/swiftformat.sh"
-
+    scheme:
+      testTargets:
+        - SiriusMapUITests
+  SiriusMapUITests:
+    type: bundle.ui-testing
+    platform: iOS
+    sources: SiriusMapUITests
+    dependencies:
+      - target: SiriusMap
