--- a/flutter_sirius_map/pubspec.yaml
+++ b/flutter_sirius_map/pubspec.yaml
@@ -87,7 +87,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/points/name_to_id.json
+    - assets/points/anchor.geojson
     - assets/images/
     - assets/points/
   #   - images/a_dot_burr.jpeg
